# Compufest-Automated-Attendence

./: .gitignore  README.md
ai/: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  audio_base64.txt  mockprep.db  pyproject.toml  requirements.txt  setup.py  test_redis.py
ai/app/: main.py  wsgi.py
ai/app/api/: dependencies.py
ai/app/api/routes/: __init__.py  face_analysis_routes.py  interview_routes.py  report_routes.py  resume_routes.py  tts_routes.py
ai/app/api/schemas/: __init__.py  interview_schema.py  report_schema.py  resume_schema.py
ai/app/core/: __init__.py  config.py  constants.py  error_handlers.py  exceptions.py  logger.py  security.py
ai/app/llm/: client.py  llm_guardrails.py  prompts.py
ai/app/observability/: __init__.py  healthcheck.py  metrics.py  tracing.py
ai/app/persistence/database/: __init__.py  base.py  session.py
ai/app/persistence/redis/: __init__.py  client.py  interview_session.py  resume_store.py
ai/app/services/: __init__.py  ai_service.py  face_analysis_service.py  interview_service.py  question_service.py  report_service.py  resume_service.py  scoring_service.py
ai/app/tests/: conftest.py
ai/app/tests/integration/: test_interview_api.py  test_report_api.py  test_resume_api.py
ai/app/utils/: __init__.py  classifier.py  json.py  time.py  uuid.py  validators.py
ai/infra/docker/: Dockerfile  docker-compose.yml
ai/infra/kubernetes/: deployment.yaml  hpa.yaml  service.yaml
ai/infra/nginx/: nginx.conf
ai/scripts/: backfill_reports.py  cleanup_session.py  face_ai.py  seed_db.py
backend/: server.js  (+3 more)
(+78 files in other folders)
